--- a/partials/footer.html
+++ b/partials/footer.html
@@ -59,6 +59,14 @@
                             d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
                     </svg>
                 </a>
+                <a href="https://politics.raisethemoney.com/en/lbennettQz0cN3QQlvIxF2wDZpH3yA"
+                    class="mt-2 group bg-red-600 hover:bg-red-700 text-white font-bold py-5 px-10 rounded-lg text-xl shadow-2xl transition-colors duration-300 flex items-center justify-center">
+                    Donate
+                    <svg class="w-6 h-6 ml-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                    </svg>
+                </a>
             </div>
 
             <!-- Contact Info -->
